--- a/book.toml
+++ b/book.toml
@@ -16,6 +16,7 @@ enable = true    # whether or not to enable section folding
 level = 0         # the depth to start folding
 
 [output.epub]
+optional = true
 #additional-css = ["./path/to/main.css"]
 #use-default-css = false
 #cover-image = "ebook-cover.png"
